--- a/Speech2Text.html
+++ b/Speech2Text.html
@@ -1,5 +1,5 @@
 
-<html lang="en" dir="ltr">
+<html>
   <head>  
     <title>Speech maker</title>
     <style>
@@ -109,7 +109,6 @@ form button:hover{
   }
 }
    </style>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
   </head>
   <body>
 <center><h1>Text to Speech</h1>
